# NATriuM

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  build_options.txt  git_readme.txt  grid-couette.eps  howto.txt  nat.aux  nat.out  nat.tex  natan_test.txt  natrium.html
examples/step-1/: CMakeLists.txt  CouetteFlow2D.h
src/: CMakeLists.txt  CMake_UnityBuild.txt  KBCStandard_test.cpp  NATriuM.cpp  Riemann2D.cpp  Riemann2D.h
src/analysis/: CMakeLists.txt
src/analysis/cavity-convergence/: CMakeLists.txt  CompareToBotella.cpp  CompareToBotella.h  CompareToErturk.cpp  CompareToErturk.h  CompareToGhia.cpp  CompareToGhia.h  cavity-benchmark.cpp
src/analysis/collision-analysis/: CMakeLists.txt  collision-analysis.cpp
src/analysis/convergence-analysis/: CMakeLists.txt  convergence-analysis.cpp  plot_runtime.gnp  runtime.eps
src/analysis/convergence-analysis-advection-solver/: CMakeLists.txt  PeriodicTestDomain2D.h  advectionConvergence.cpp  advectionConvergence3D.cpp  errors_smooth_sinewave.eps  plot_errors.gnp  results.txt
src/analysis/convergence-analysis-basic/: CMakeLists.txt  convergence-analysis-Ma.cpp  convergence-analysis-basic.cpp  convergence_analysis_basic.eps  convergence_analysis_basic.gnp  convergence_analysis_basic_abs_velocity_error.eps  convergence_analysis_basic_velocity_error.eps  plot_2norm_vs_overalltime.eps  plot_2norm_vs_overalltime.gnp  plot_err_over_time.gnp  plot_order.eps  plot_order_2norm.eps  plot_order_2norm.gnp  plot_order_supnorm.eps  plot_order_supnorm.gnp  plot_time.eps  plot_time.gnp  runtime.txt  table_all.txt  table_order.txt  table_refinement.gnp  table_refinement_absvelo.gnp  table_runtime.txt
src/analysis/convergence-analysis-junk/: CMakeLists.txt  convergence-analysis-junk.cpp  convergence_analysis_basic_velocity_error.eps  convergence_analysis_junk_velocity_error.eps  plot_err_over_time.gnp  plot_parameters.gnp  runtime.txt  table_all.txt  table_order.txt  table_refinement.gnp  table_runtime.txt
src/analysis/convergence-analysis-kinetic-energy/: CMakeLists.txt  convergence-analysis-kinE.cpp  convergence_analysis_basic_velocity_error.eps  kinetic_energy.eps  plot_kinE.gnp  table_refinement.gnp
src/analysis/convergence-analysis-p/: CMakeLists.txt  convergence-analysis-p-old.cpp  convergence-analysis-p.cpp  convergence_analysis_basic_velocity_error.eps  plot_err_over_time.gnp  plot_order.eps  plot_order.gnp  plot_order_Ma0.005_ref2.eps  plot_time.eps  plot_time.gnp  table_order.txt  table_order_Ma0.001.txt  table_order_Ma0.01.txt  table_runtime.txt
src/analysis/convergence-analysis-timestepping/: CMakeLists.txt  convergence-analysis-time.cpp  plot_order.gnp  plot_order_feorder2.eps  plot_order_feorder4.eps  table_order_periodic_feorder2.txt  table_order_periodic_feorder4.txt  table_order_wall_feorder2.txt  table_order_wall_feorder4.txt  taylor_green.eps
src/analysis/convergence-analysis-wall/: CMakeLists.txt  convergence-analysis-wall.cpp  convergence_analysis_basic_velocity_error.eps  plot_err_over_time.gnp  plot_order.eps  plot_order.gnp  plot_time.eps  plot_time.gnp  table_order.txt  table_runtime.txt
src/analysis/convergence-analysis-wall-p/: CMakeLists.txt  convergence-analysis-wall-p.cpp  error_2norm.eps  error_supnorm.eps  plot_order.gnp  table_all_crank_ref1.txt  table_all_rk5_ref2.txt  table_order.txt  table_runtime.txt
src/analysis/couette-convergence/: CMakeLists.txt  couette-convergence.cpp
src/analysis/matrix-analysis/: CMakeLists.txt  analyzeMatrix.cpp  matrixAnalysis.cpp  matrixAnalysis.h  plot_spectrum.gnp  plot_spectrum.info  plot_spectrum_p2.eps  plot_spectrum_p2.eps.REMOVED.git-id  plot_spectrum_p2.gnp  plot_spectrum_p3.eps  plot_spectrum_p3.gnp  plot_spectrum_p4.eps  plot_spectrum_p4.eps.REMOVED.git-id
src/analysis/movedtgv-convergence/: CMakeLists.txt  movedtgv2d-benchmark.cpp
src/analysis/parallel_benchmark/: CMakeLists.txt  benchmark.cpp  step-2.cpp
src/analysis/performance-analysis/: CMakeLists.txt  performance-analysis.cpp
src/analysis/sedg_parallel_benchmark_periodic/: CMakeLists.txt  sedg_benchmark.cpp
src/analysis/semilagrange-stability/: CMakeLists.txt  sl-stability.cpp
src/analysis/shock-tube_stability/: CMakeLists.txt  stability_shocktube.cpp
src/analysis/sinusoidal/: CMakeLists.txt  shear_0.2_0.2_Re50.eps.REMOVED.git-id  shear_Re100000_start.avi.REMOVED.git-id  sinus-shear.cpp
src/analysis/sl_parallel_benchmark_periodic/: CMakeLists.txt  benchmark.cpp
src/analysis/sl_parallel_benchmark_periodic_2d/: CMakeLists.txt  benchmark.cpp
src/analysis/tgv-convergence/: CMakeLists.txt  tgv2d-benchmark.cpp
src/benchmarks/: CouetteFlow2D.cpp  CouetteFlow2D.h
src/boltzmannmodels/: BoltzmannModel.cpp  BoltzmannModel.h  D2Q9IncompressibleModel.cpp  D2Q9IncompressibleModel.h  D2Q9Model.cpp  D2Q9Model.h
src/collisionmodels/: BGKTransformed.cpp  BGKTransformed.h  CollisionModel.cpp  CollisionModel.h
src/doc/: ClassDiagram.class.violet.html  ClassDiagram.eps  Doxyfile  FFTW.md  INSTALL OMNI.md  INSTALL.md  INSTALL.txt  INSTALL_HS.md  howto.txt
src/doc/html/: BGK_8h.html  (+813 more)
src/examples/: CMakeLists.txt
src/natrium/: CMakeLists.txt  NATriuM.cpp
src/postprocessing/: CMakeLists.txt  FFT.cpp  compute_energy_spectrum.py  fft  videoplot.sh  videoplot.sh~
src/preprocessing/: NATriuM_parameters.xml  NATriuM_parameters_changed.xml  parameter_gui
src/problemdescription/: BoundaryDescription.cpp  BoundaryDescription.h  ProblemDescription.cpp  ProblemDescription.h  SimpleProblemDescription2D.cpp  SimpleProblemDescription2D.h
src/solver/: CFDSolver.h
src/streamingdata/: DataMinLee2011.cpp  DataMinLee2011.h  StreamingData.h
src/test/: CMakeLists.txt  MainTest.cpp
src/timeintegration/: RungeKutta5LowStorage.h
src/utilities/: BasicNames.h
test/: CMakeLists.txt  MainTest.cpp
test/benchmarks/: CouetteFlow2D_test.cpp
test/boltzmannmodels/: D2Q9IncompressibleModel_test.cpp
test/collisionmodels/: BGKTransformed_test.cpp
test/solver/: CFDSolver_test.cpp
test/timeintegration/: ExponentialTimeIntegrator_test.cpp  TimeIntegrator_test.cpp
test/utilities/: BasicNames_test.cpp
(+1407 files in other folders)
