#add_subdirectory(convergence-analysis-advection-solver)
#add_subdirectory(convergence-analysis-spatial)
#add_subdirectory(convergence-analysis-timestepping)
add_subdirectory(convergence-analysis-basic)
#add_subdirectory(convergence-analysis-junk)
#add_subdirectory(convergence-analysis-kinetic-energy)
#add_subdirectory(convergence-analysis-p)
#add_subdirectory(convergence-analysis-wall-p)
#add_subdirectory(convergence-analysis)
#add_subdirectory(matrix-analysis)
#add_subdirectory(sinusoidal)
