# Examples
add_subdirectory(archive/step-poiseuille2D)
add_subdirectory(archive/step-poiseuille3D)
add_subdirectory(lidDrivenCavity2D)
add_subdirectory(archive/step-1-variousRe)
add_subdirectory(archive/step-2)
add_subdirectory(archive/step-6)
add_subdirectory(archive/step-grid-in)
add_subdirectory(archive/step-3DHill1)
add_subdirectory(archive/static-droplet)
add_subdirectory(archive/step-9)
add_subdirectory(archive/step-sinusoidal)
add_subdirectory(archive/step-16)
add_subdirectory(archive/step-couette3D)
add_subdirectory(archive/step-turbulentChannel)
add_subdirectory(archive/step-shearLayer2D)
add_subdirectory(archive/step-10)
add_subdirectory(archive/step-11)
add_subdirectory(archive/step-12)
add_subdirectory(archive/step-13)
add_subdirectory(taylorGreenVortex3D)
add_subdirectory(archive/step-decayingTurbulence2D)
add_subdirectory(mixingLayer3D)
add_subdirectory(archive/step-sphere)

