# Examples
add_subdirectory(Airfoil2D)
add_subdirectory(LidDrivenCavity2D)
add_subdirectory(MixingLayer3D)
add_subdirectory(Sphere)
add_subdirectory(TaylorGreenVortex3D)
add_subdirectory(TurbulentChannel)

#add_subdirectory(archive/static-droplet)
#add_subdirectory(archive/step-couette3D)
#add_subdirectory(archive/step-decayingTurbulence2D)
#add_subdirectory(archive/step-poiseuille2D)
#add_subdirectory(archive/step-poiseuille3D)
#add_subdirectory(archive/step-shearLayer2D)
#add_subdirectory(archive/step-sinusoidal)
#add_subdirectory(archive/step-1-variousRe)
#add_subdirectory(archive/step-2)
#add_subdirectory(archive/step-9)
#add_subdirectory(archive/step-11)
#add_subdirectory(archive/step-12)
#add_subdirectory(archive/step-13)
#add_subdirectory(archive/step-16)
